Header and content Added
Header section w// link navigation, and three <div> sections in content, one for each of us
Meant to upload this the other day along with stylesheet changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="css/stylesheet.css" href="">
+    <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body> 
-        <p>Hello World</p>
-        <p>Hello world is Eddie</p>
+        <header>
+            <h1>IT 100 Project</h1>
+            <nav>
+            <ul>
+                <li><a href="#Daniel">Daniel</a></li>
+                <li><a href="#Eddie">Eddie</a></li>
+                <li><a href="#Edwin">Edwin</a></li>
+            </ul>
+            </nav>
+        </header>
+        <content>
+            <div id="Daniel">
+                Daniel's Stuff
+            </div>
+            <div id="Eddie">
+                Eddie's Stuff
+            </div>
+            <div id="Edwin">
+                Edwin's stuff
+            </div>
+        </content>
     </body>
 </html>
