--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
             </div>
             <div class="person" id="Edwin">
                 <h2>Edwin's stuff</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Donec pretium vulputate sapien nec sagittis. Quam vulputate dignissim suspendisse in est ante in. Id neque aliquam vestibulum morbi blandit cursus risus at. Bibendum est ultricies integer quis auctor elit sed vulputate. Felis imperdiet proin fermentum leo. Proin sagittis nisl rhoncus mattis rhoncus urna. Mattis nunc sed blandit libero volutpat sed. Mi tempus imperdiet nulla malesuada. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Felis donec et odio pellentesque diam. Nunc id cursus metus aliquam eleifend mi in nulla. Orci ac auctor augue mauris.</p>
+                <div class="container">
+		<section id="main-bio">
+			<h2>Edwin Guevara </h2>
+
+			<!-- Headshot image -->
+			<img id="bio-image" src="img/headshot.png" alt="Edwin Guevara  headshot">
+
+			<!-- Paragraph with embedded link -->
+			<h3>UX Designer</h3>
+			<p>
+				Edwin Guevara is a UX Designer based out of Seattle, WA. For the past year, he has worked with Reef Cannabis to redesign their e-commerce site. As the sole UX designer, he managed the project from research to production. With a team of developers and key stakeholders throughout the process to troubleshoot along the way. Before making a career change into UX, Edwin worked in the nonprofit sector for nearly a decade. He worked in various roles, most recently as IT Project Manager at the Seattle Art Museum. In this role, he worked with developers and designers on the museum's website and exhibits. While the position was cut short due to the pandemic, he found the experience life-changing.
+				He promptly enrolled in the User Experience Certificate program at the School of Visual Concepts and the Web Design Associates program at Seattle Central College. As a project manager, he saw the value of learning code and design, which inspired him to return to school. But it was his career in the nonprofits that taught him the power of empathy and clear communication. Edwin is an excellent asset to any team because of his love for collaboration and his background in project management.  His experience as a PM means that he can communicate with developers and designers and think about the bigger picture. At the same time, his background in nonprofits makes him empathetic and understanding of the needs of users. He is eager to continue to learn and grow, working along with great designers.
+							</p>
+		</section>
+
+		<!-- Section 2: Contact Information -->
+		<section id="contact-info">
+
+			<h2>Contact Information</h2>
+			
+			<ul>
+				<li><strong>Email:</strong> <a href="mailto:mitche.guevara@gmail.com">mitche.guevara@gmail.com</a></li>
+				<li><strong>Portfolio:</strong> <a href="https://www.edwin-guevara.com/">Edwin Guevara UX Portfolio</a></li>
+			</ul>
+
+		</section>
+	</div>
             </div>
         </content>
     </body>
