--- a/index.html
+++ b/index.html
@@ -17,7 +17,32 @@
         <content>
             <div class="person" id="Daniel">
                 <h2>Daniel's Stuff</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Donec pretium vulputate sapien nec sagittis. Quam vulputate dignissim suspendisse in est ante in. Id neque aliquam vestibulum morbi blandit cursus risus at. Bibendum est ultricies integer quis auctor elit sed vulputate. Felis imperdiet proin fermentum leo. Proin sagittis nisl rhoncus mattis rhoncus urna. Mattis nunc sed blandit libero volutpat sed. Mi tempus imperdiet nulla malesuada. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Felis donec et odio pellentesque diam. Nunc id cursus metus aliquam eleifend mi in nulla. Orci ac auctor augue mauris.</p>
+		  
+	
+			<h2>Daniel Gebreselassie</h2>
+
+			<!-- Headshot image -->
+			<img id="Dans_bio-image" src="IMG-0485.jpg" alt="Daniel Gebreselassie Image">
+
+			<!-- Paragraph with embedded link -->
+			<h3>Data analyst/SEO Professional</h3>
+			<p>
+				Daniel Gebreselassie is a Data Analyst/SEO out of Seattle, Washington. Daniel Gebreselassie was employed in the construction industry for the last decade. His journey through this field began with completing a 600 hour course at Seattle Vocational Institute in which he was taught the basic concepts and industry standards while aquiring multiple relevant certifications. Upon graduation he entered the workforce first as a part of a small local home remodel company, than as a member of local 30 Carpenters union. The pandemic caused Daniel, like many others to re-evaluate his career choice and motivate him to pursue further education and magnified a desire to aquire a skillset more suited to a rapidly techifying (is that even a word?) Job Market. He enrolled in the web development program at Seattle Central College And is exploring obtaining other field and industry relevant certificates. His time in the construction field has taught him many things but 2 things stand out. One, that every project requires teamwork and communicaton between the various trades. Second that a jack of all trades is a master of none. The beginning of something is almost is always the most exciting because it holds the most possible outcomes and Daniel is excited to begin his journey, both educationally and professionally.      
+			</p>
+		</section>
+
+		<!-- Section 2: Contact Information -->
+		<section id="contact-info">
+
+			<h2>Contact Information</h2>
+			
+			<ul>
+				<li><strong>Email:</strong> <a href="mailto:danielgebreselassie20@gmail.com">danielgebreselassie20@gmail.com</a></li>
+			</ul>
+
+		</section>
+
+               
             </div>
             <div class="person" id="Eddie">
                 <h2>Eddie's Stuff</h2>
