Added Eddie's Profile

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                
             </div>
             <div class="person" id="Eddie">
-                <h2>Eddie's Stuff</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vel orci porta non pulvinar neque laoreet suspendisse interdum consectetur. Donec pretium vulputate sapien nec sagittis. Quam vulputate dignissim suspendisse in est ante in. Id neque aliquam vestibulum morbi blandit cursus risus at. Bibendum est ultricies integer quis auctor elit sed vulputate. Felis imperdiet proin fermentum leo. Proin sagittis nisl rhoncus mattis rhoncus urna. Mattis nunc sed blandit libero volutpat sed. Mi tempus imperdiet nulla malesuada. Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Felis donec et odio pellentesque diam. Nunc id cursus metus aliquam eleifend mi in nulla. Orci ac auctor augue mauris.</p>
+                <h2>Eddie Melton</h2>
+                <img src="" alt="Eddie Melton's Headshot">
+                <h3>Front-End Web Developer</h3>
+                <p>Eddie is an aspiring web developer born and raised in Seattle, Wa. Eddie's career began while working for a locally-owned pottery shop. During the COVID-19 pandemic, the shop found a new need for a robust online storefront. With only a little coding experience and a lot of confidence in their googling skills, Eddie worked with the owner to create a new e-commerce site for the store. In doing this, they discovered a passion for web development and a desire to support small buisness.<br>In order to further their skills, Eddie left a four-year university for the more focused two-year web development program at Seattle Central. They hope to become a front-end web developer, and use thier skills to help small businesses create the website of their dreams. In their spare time, Eddie enjoys sewing, playing tabletop games, and generally any activity that involves being a huge nerd with their friends and family.</p>
             </div>
             <div class="person" id="Edwin">
                 <h2>Edwin's stuff</h2>
