--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body> 
         <header>
             <h1>IT 100 Project</h1>
-            <nav>
+            <div id="navbar">
             <ul>
                 <li><a href="#Daniel">Daniel</a></li>
                 <li><a href="#Eddie">Eddie</a></li>
@@ -15,14 +15,11 @@
             </nav>
         </header>
         <content>
-            <div class="person" id="Daniel">
-                <h2>Daniel's Stuff</h2>
-		  
-	
+            <div class="person" id="Daniel">		  
 			<h2>Daniel Gebreselassie</h2>
 
 			<!-- Headshot image -->
-			<img id="Dans_bio-image" src="IMG-0485.jpg" alt="Daniel Gebreselassie Image">
+			<img id="bio-image" src="img/daniel.jpg" alt="Daniel Gebreselassie Image">
 
 			<!-- Paragraph with embedded link -->
 			<h3>Data analyst/SEO Professional</h3>
@@ -34,7 +31,7 @@
 		<!-- Section 2: Contact Information -->
 		<section id="contact-info">
 
-			<h2>Contact Information</h2>
+			<h3>Contact Information</h3>
 			
 			<ul>
 				<li><strong>Email:</strong> <a href="mailto:danielgebreselassie20@gmail.com">danielgebreselassie20@gmail.com</a></li>
@@ -46,31 +43,30 @@
             </div>
             <div class="person" id="Eddie">
                 <h2>Eddie Melton</h2>
-                <img src="" alt="Eddie Melton's Headshot">
+                <img id="bio-image" src="img/eddie.jpg" alt="Eddie Melton's Headshot">
                 <h3>Front-End Web Developer</h3>
                 <p>Eddie is an aspiring web developer born and raised in Seattle, Wa. Eddie's career began while working for a locally-owned pottery shop. During the COVID-19 pandemic, the shop found a new need for a robust online storefront. With only a little coding experience and a lot of confidence in their googling skills, Eddie worked with the owner to create a new e-commerce site for the store. In doing this, they discovered a passion for web development and a desire to support small buisness.<br>In order to further their skills, Eddie left a four-year university for the more focused two-year web development program at Seattle Central. They hope to become a front-end web developer, and use thier skills to help small businesses create the website of their dreams. In their spare time, Eddie enjoys sewing, playing tabletop games, and generally any activity that involves being a huge nerd with their friends and family.</p>
             </div>
             <div class="person" id="Edwin">
-                <h2>Edwin's stuff</h2>
                 <div class="container">
 		<section id="main-bio">
 			<h2>Edwin Guevara </h2>
 
 			<!-- Headshot image -->
-			<img id="bio-image" src="img/headshot.png" alt="Edwin Guevara  headshot">
+			<img id="bio-image" src="img/edwin.jpg" alt="Edwin Guevara  headshot">
 
 			<!-- Paragraph with embedded link -->
 			<h3>UX Designer</h3>
 			<p>
-				Edwin Guevara is a UX Designer based out of Seattle, WA. For the past year, he has worked with Reef Cannabis to redesign their e-commerce site. As the sole UX designer, he managed the project from research to production. With a team of developers and key stakeholders throughout the process to troubleshoot along the way. Before making a career change into UX, Edwin worked in the nonprofit sector for nearly a decade. He worked in various roles, most recently as IT Project Manager at the Seattle Art Museum. In this role, he worked with developers and designers on the museum's website and exhibits. While the position was cut short due to the pandemic, he found the experience life-changing.
-				He promptly enrolled in the User Experience Certificate program at the School of Visual Concepts and the Web Design Associates program at Seattle Central College. As a project manager, he saw the value of learning code and design, which inspired him to return to school. But it was his career in the nonprofits that taught him the power of empathy and clear communication. Edwin is an excellent asset to any team because of his love for collaboration and his background in project management.  His experience as a PM means that he can communicate with developers and designers and think about the bigger picture. At the same time, his background in nonprofits makes him empathetic and understanding of the needs of users. He is eager to continue to learn and grow, working along with great designers.
+				Edwin Guevara is a UX Designer based out of Seattle, WA. For the past year, he has worked with Reef Cannabis to redesign their e-commerce site. As the sole UX designer, he managed the project from research to production. With a team of developers and key stakeholders throughout the process to troubleshoot along the way. Before making a career change into UX, Edwin worked in the nonprofit sector for nearly a decade. He worked in various roles, most recently as IT Project Manager at the Seattle Art Museum. In this role, he worked with developers and designers on the museum's website and exhibits. While the position was cut short due to the pandemic, he found the experience life-changing.</p>
+				<p>He promptly enrolled in the User Experience Certificate program at the School of Visual Concepts and the Web Design Associates program at Seattle Central College. As a project manager, he saw the value of learning code and design, which inspired him to return to school. But it was his career in the nonprofits that taught him the power of empathy and clear communication. Edwin is an excellent asset to any team because of his love for collaboration and his background in project management.  His experience as a PM means that he can communicate with developers and designers and think about the bigger picture. At the same time, his background in nonprofits makes him empathetic and understanding of the needs of users. He is eager to continue to learn and grow, working along with great designers.
 							</p>
 		</section>
 
 		<!-- Section 2: Contact Information -->
 		<section id="contact-info">
 
-			<h2>Contact Information</h2>
+			<h3>Contact Information</h3>
 			
 			<ul>
 				<li><strong>Email:</strong> <a href="mailto:mitche.guevara@gmail.com">mitche.guevara@gmail.com</a></li>
@@ -82,4 +78,18 @@
             </div>
         </content>
     </body>
+	<script>
+		window.onscroll = function() {myFunction()};
+		
+		var navbar = document.getElementById("navbar");
+		var sticky = navbar.offsetTop;
+		
+		function myFunction() {
+		  if (window.pageYOffset >= sticky) {
+			navbar.classList.add("sticky")
+		  } else {
+			navbar.classList.remove("sticky");
+		  }
+		}
+		</script>
 </html>
