--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<img id="bio-image" src="img/daniel.jpg" alt="Daniel Gebreselassie Image">
 
 			<!-- Paragraph with embedded link -->
-			<h3>Data analyst/SEO Professional</h3>
+			<h3>Data Analyst/Full Stackdeveloper</h3>
 			<p>
 				Daniel Gebreselassie is a Data Analyst/SEO out of Seattle, Washington. Daniel Gebreselassie was employed in the construction industry for the last decade. His journey through this field began with completing a 600 hour course at Seattle Vocational Institute in which he was taught the basic concepts and industry standards while aquiring multiple relevant certifications. Upon graduation he entered the workforce first as a part of a small local home remodel company, than as a member of local 30 Carpenters union. The pandemic caused Daniel, like many others to re-evaluate his career choice and motivate him to pursue further education and magnified a desire to aquire a skillset more suited to a rapidly techifying (is that even a word?) Job Market. He enrolled in the web development program at Seattle Central College And is exploring obtaining other field and industry relevant certificates. His time in the construction field has taught him many things but 2 things stand out. One, that every project requires teamwork and communicaton between the various trades. Second that a jack of all trades is a master of none. The beginning of something is almost is always the most exciting because it holds the most possible outcomes and Daniel is excited to begin his journey, both educationally and professionally.      
 			</p>
